samples/_failures_safe/1761283365_eaef34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b57b774a.c:151: error: expected ‘;’, ‘,’ or ‘)’ at end of input
